# kioku-srs

./: .appveyor.yml  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  ADDONS.md  ARCHITECTURE.md  BUILDING.md  CMakeLists.txt  Doxyfile  MISC.md  MODEL.md  PRINCIPLES.md  README.md  REST.md  ROADMAP.md  SUPPORT.md  luautils.c  luautils.h  main.c  test.json
.github/ISSUE_TEMPLATE/: question.md
ci/linux/: build-deps.sh  build.sh
ci/osx/: build-deps.sh  build.sh
ci/win32/: build.bat
ci/windows/: build-deps.bat  build.bat  rebuild.bat  test.bat
client/: index.html
client/js/: rest.js
client/testdeck/: abc.txt  def.txt  ghi.txt  jkl.txt
client/testdeck/cards/1/: back.txt  front.txt
cmake/Modules/: FindLibCURL.cmake  FindPthreads.cmake
cross/: toolchain-mingw32.cmake  toolchain-mingw64.cmake
docker/: Dockerfile
docker/doxygen/: Dockerfile
docker/linux/: Dockerfile
docker/mingw/: Dockerfile
include/: kioku.h  srs.h
include/kioku/: card.h  datastructure.h  debug.h  decl.h  enum.h  error.h  filesystem.h  git.h  jsonapi.h  log.h  model.h  rest.h  result.h  schedule.h  simplegit.h  string.h  types.h
include/kioku/model/: card.h
include/srs/: card.h  datastructure.h  debug.h  decl.h  enum.h  error.h  filesystem.h  git.h  log.h  model.h  rest.h  result.h  schedule.h  string.h  types.h
sample-model/my-user-name/addons/my-test-addon/: deps.json
sample-model/my-user-name/templates/my-test-template/: fields.lua  generator.lua
sample-model/my-user-name/templates/my-test-template/resource/: style.css
server/: CMakeLists.txt  main.c
src/: CMakeLists.txt  card.c  error.c  filesystem.c  log.c  main.c  model.c  schedule.c
src/kioku/: datastructure.c  error.c  filesystem.c  git.c  log.c  model.c  schedule.c  simplegit.c  string.c
src/kioku/model/: card.c
test/: CMakeLists.txt  card.c  datastructure.c  example.c  filesystem.c  git.c  log.c  macro.c  model.c  schedule.c  string.c
use-cases/: 1.txt
